yamls4/teadeploysvc.yml.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp-deploy
spec:
  #replicas: 10
  #selector:
    #matchLabels:
      #app: simpleapp 
  template:
    metadata:
      labels:
        app: simpleapp 
    spec:
      containers:
      - name: simpleapp 
        image: goldmandock/simpleapp:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20           
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: simpleapp
