yamls4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  annotations:
     # Set up your ingress.class below (in this example, we are using nginx ingress controller)
     # kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  # Replace the DOMAIN placeholder with the correct domain name
   - hosts:
     - simpleapp.example.com
     secretName: letsencrypt-staging-tls
  #ingressClassName: nginx
  rules:
  - host: simpleapp.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: simpleapp-svc
            port:
              number: 80
